# bookiniad.com

./: .dockerignore  .gitignore  DATA_SETUP_GUIDE.md  Dockerfile  README.md  create_availability_data.py  db.sqlite3.bak  docker-compose.yaml  init.sh  main.py  pyproject.toml  requirements.txt
main/: admin.py  models.py  urls.py  views.py
main/agents/: agent.py  assistant.py
main/ai_agents/: agent.py  assistant.py  bot.py
main/fixtures/: accommodations.json  air.json  travel_packages.json
main/management/commands/: create_admin.py  setup_sample_data.py
main/migrations/: 0001_initial.py  0002_alter_travelpackage_accommodation_and_more.py  0003_accommodations_price_per_night.py  0004_accommodations_total_rooms_accommodationavailability_and_more.py  0005_alter_booking_reservation_number.py  0006_cart_cartitem.py
main/templates/main/: accommodation_search.html  ai_comparison.html  base.html  booking_complete.html  booking_form.html  booking_inquiry.html  booking_success.html  cart.html  chat_interface.html  create_booking.html  error.html  flight_list_partial.html  flight_search.html  index.html  performance_analysis.html  search_results.html
main/templatetags/: custom_filters.py
nginx/: nginx.conf
settings/: settings.py  urls.py
