[project]
name = "bookiniad-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.7",
    "openai-agents>=0.2.9",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "whitenoise==6.6.0",
]
